--- a/bump_version.yml
+++ b/bump_version.yml
@@ -23,10 +23,10 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  GIT_AUTHOR_NAME: ${{ secrets.DEFAULT_GIT_AUTHOR_NAME }}
-  GIT_AUTHOR_EMAIL: ${{ secrets.DEFAULT_GIT_AUTHOR_EMAIL }}
-  GIT_COMMITTER_NAME: ${{ secrets.DEFAULT_GIT_AUTHOR_NAME }}
-  GIT_COMMITTER_EMAIL: ${{ secrets.DEFAULT_GIT_AUTHOR_EMAIL }}
+  GIT_AUTHOR_NAME: ${{ secrets.GIT_AUTHOR_NAME }}
+  GIT_AUTHOR_EMAIL: ${{ secrets.GIT_AUTHOR_EMAIL }}
+  GIT_COMMITTER_NAME: ${{ secrets.GIT_AUTHOR_NAME }}
+  GIT_COMMITTER_EMAIL: ${{ secrets.GIT_AUTHOR_EMAIL }}
 
 jobs:
   version_patch:
