--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -3,6 +3,9 @@ name: Bumping
 on:
   workflow_call:
     inputs:
+      package:
+        required: true
+        type: string
       type:
         required: false
         type: string
@@ -41,7 +44,7 @@ jobs:
       run: |
         GIT_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
         GIT_TAG_BUMPED=$(perl -pe 's/^(\d+\.)(\d+\.)(\d+)$/$1.$2.($3+1)/e' <<<"$GIT_TAG")
-        sed -i "s/^\(version *= *\)\"[0-9]\+\.[0-9]\+\.[0-9]\+\"/\1\"$GIT_TAG_BUMPED\"/g" cinterop.nimble
+        sed -i "s/^\(version *= *\)\"[0-9]\+\.[0-9]\+\.[0-9]\+\"/\1\"$GIT_TAG_BUMPED\"/g" ${{ inputs.package }}.nimble
         git commit -am "Bump version"
         git tag $GIT_TAG_BUMPED
     - name: Push changes
@@ -62,7 +65,7 @@ jobs:
       run: |
         GIT_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
         GIT_TAG_BUMPED=$(perl -pe 's/^(\d+\.)(\d+)(\.)\d+$/$1.($2+1).$3.0/e' <<<"$GIT_TAG")
-        sed -i "s/^\(version *= *\)\"[0-9]\+\.[0-9]\+\.[0-9]\+\"/\1\"$GIT_TAG_BUMPED\"/g" cinterop.nimble
+        sed -i "s/^\(version *= *\)\"[0-9]\+\.[0-9]\+\.[0-9]\+\"/\1\"$GIT_TAG_BUMPED\"/g" ${{ inputs.package }}.nimble
         git commit -am "Bump version"
         git tag $GIT_TAG_BUMPED
     - name: Push changes
